--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-facebook": "^9.0.12",
     "react-icons": "^4.10.1",
+    "react-loader-spinner": "^5.3.4",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
