--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-social-icons": "^5.15.0",
     "sweetalert2": "^11.7.12",
     "sweetalert2-react-content": "^5.0.7",
+    "use-sound": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
